--- a/app/package.json
+++ b/app/package.json
@@ -10,10 +10,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.1",
 		"@telegram-apps/sdk-react": "^2.0.20",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"next": "^15.0.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"tailwind-merge": "^2.5.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
