--- a/app/package.json
+++ b/app/package.json
@@ -10,14 +10,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.2",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"next": "^15.0.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"tailwind-merge": "^2.5.5"
+		"tailwind-merge": "^2.5.5",
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
