--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,14 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"lucide-react": "^0.469.0",
 		"next": "^15.0.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
