--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,10 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-avatar": "^1.1.2",
+		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@telegram-apps/sdk-react": "^2.0.20",
