--- a/app/package.json
+++ b/app/package.json
@@ -20,13 +20,15 @@
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"input-otp": "^1.4.2",
 		"lucide-react": "^0.469.0",
 		"next": "^15.0.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
-		"vaul": "^1.1.2"
+		"vaul": "^1.1.2",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
