--- a/server-nest/package.json
+++ b/server-nest/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.3",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.7",
     "helmet": "^8.0.0",
     "mongoose": "^8.10.1",
     "passport-jwt": "^4.0.1",
