--- a/app/package.json
+++ b/app/package.json
@@ -19,19 +19,26 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@telegram-apps/sdk-react": "^2.0.20",
+		"@web3-storage/w3up-client": "^17.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"crypto": "^1.0.1",
 		"input-otp": "^1.4.2",
+		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.469.0",
+		"mongoose": "^8.10.1",
 		"next": "^15.0.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
+		"telegram": "^2.26.22",
 		"vaul": "^1.1.2",
+		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
 		"@types/react": "18.3.1",
 		"@types/react-dom": "18.3.0",
