--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
 		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
+		"@telegram-apps/init-data-node": "^2.0.3",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"@web3-storage/w3up-client": "^17.2.0",
 		"class-variance-authority": "^0.7.1",
@@ -27,7 +28,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.469.0",
 		"mongoose": "^8.10.1",
-		"next": "^15.0.0",
+		"next": "15.3.0-canary.33",
+		"node-cache": "^5.1.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
