--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,11 @@
 		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
+		"@storacha/client": "^1.2.5",
 		"@telegram-apps/init-data-node": "^2.0.3",
 		"@telegram-apps/sdk-react": "^2.0.20",
+		"@ucanto/interface": "^10.2.0",
+		"@ucanto/principal": "^9.0.2",
 		"@web3-storage/w3up-client": "^17.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
