--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ipld/car": "^5.4.0",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -21,6 +22,7 @@
 		"@storacha/client": "^1.2.5",
 		"@telegram-apps/init-data-node": "^2.0.3",
 		"@telegram-apps/sdk-react": "^2.0.20",
+		"@ucanto/core": "^10.3.1",
 		"@ucanto/interface": "^10.2.0",
 		"@ucanto/principal": "^9.0.2",
 		"@web3-storage/w3up-client": "^17.2.0",
