--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ipld/dag-ucan": "^3.4.5",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -19,6 +20,8 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@storacha/client": "^1.2.5",
+		"@storacha/did-mailto": "^1.0.2",
+		"@storacha/ui-react": "^2.6.4",
 		"@telegram-apps/init-data-node": "^2.0.3",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"@ucanto/interface": "^10.2.0",
