--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,16 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CF_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
           CLOUDFLARE_PAGES_PROJECT_NAME: ${{ (github.ref_name == 'main') && 'tg-miniapp-staging' || 'tg-miniapp-preview' }}
+          NODE_ENV: ${{ secrets.NODE_ENV }}
+          PORT: ${{ secrets.PORT }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          TELEGRAM_API_ID: ${{ secrets.TELEGRAM_API_ID }}
+          TELEGRAM_API_HASH: ${{ secrets.TELEGRAM_API_HASH }}
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          CLIENT_URL: ${{ secrets.CLIENT_URL }}
+          SERVER_PRINCIPAL: ${{ secrets.SERVER_PRINCIPAL }}
+          POINTS_PER_BYTE: ${{ secrets.POINTS_PER_BYTE }}
+          ENCRYPT_KEY: ${{ secrets.ENCRYPT_KEY }}
       - name: Find Cloudflare Pages preview URL
         uses: mathiasvr/command-output@v1.1.0
         id: cloudflare_url
