--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ipld/dag-cbor": "^9.2.2",
+		"@ipld/dag-json": "^10.2.3",
 		"@ipld/dag-ucan": "^3.4.5",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
@@ -22,6 +24,7 @@
 		"@storacha/client": "^1.2.5",
 		"@storacha/did-mailto": "^1.0.2",
 		"@storacha/ui-react": "^2.6.4",
+		"@storacha/upload-client": "^1.0.9",
 		"@telegram-apps/init-data-node": "^2.0.3",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"@ucanto/interface": "^10.2.0",
@@ -37,6 +40,7 @@
 		"multiformats": "^13.3.2",
 		"next": "15.3.0-canary.33",
 		"node-cache": "^5.1.2",
+		"p-queue": "^8.1.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
