--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,9 @@
 		"pages:deploy": "pnpm run pages:build && wrangler pages deploy"
 	},
 	"dependencies": {
-		"@ipld/car": "^5.4.0",
+		"@ipld/dag-cbor": "^9.2.2",
+		"@ipld/dag-json": "^10.2.3",
+		"@ipld/dag-ucan": "^3.4.5",
 		"@radix-ui/react-avatar": "^1.1.2",
 		"@radix-ui/react-checkbox": "^1.1.3",
 		"@radix-ui/react-dialog": "^1.1.4",
@@ -24,6 +26,9 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@storacha/client": "^1.2.5",
+		"@storacha/did-mailto": "^1.0.2",
+		"@storacha/ui-react": "^2.6.4",
+		"@storacha/upload-client": "^1.0.9",
 		"@telegram-apps/init-data-node": "^2.0.3",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"@ucanto/core": "^10.3.1",
@@ -37,8 +42,10 @@
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.469.0",
 		"mongoose": "^8.10.1",
+		"multiformats": "^13.3.2",
 		"next": "15.3.0-canary.33",
 		"node-cache": "^5.1.2",
+		"p-queue": "^8.1.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
