--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 		"pages:deploy": "pnpm run pages:build && wrangler pages deploy"
 	},
 	"dependencies": {
+		"@ipld/car": "^5.4.0",
 		"@ipld/dag-cbor": "^9.2.2",
 		"@ipld/dag-json": "^10.2.3",
 		"@ipld/dag-ucan": "^3.4.5",
@@ -56,8 +57,8 @@
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@types/jsonwebtoken": "^9.0.9",
 		"@cloudflare/next-on-pages": "^1.13.8",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^20",
 		"@types/react": "18.3.1",
 		"@types/react-dom": "18.3.0",
