--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
 		"@storacha/ui-react": "^2.6.4",
 		"@storacha/upload-client": "^1.0.9",
 		"@telegram-apps/sdk-react": "^2.0.20",
+		"carstream": "^2.3.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"crypto": "^1.0.1",
