fix: default gateway URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
           echo "NEXT_PUBLIC_STORACHA_SERVICE_URL=https://staging.up.storacha.network" >> .env
           echo "NEXT_PUBLIC_STORACHA_RECEIPTS_URL=https://staging.up.storacha.network/receipt/" >> .env
           echo "NEXT_PUBLIC_STORACHA_PROVIDER=did:web:staging.web3.storage" >> .env
-          echo "NEXT_PUBLIC_STORACHA_GATEWAY_HOSTNAME=ipfs-staging.w3s.link" >> .env
-          echo "NEXT_PUBLIC_STORACHA_GATEWAY_ID=did:web:ipfs-staging.w3s.link" >> .env
+          echo "NEXT_PUBLIC_STORACHA_GATEWAY_URL=https://staging.w3s.link" >> .env
+          echo "NEXT_PUBLIC_STORACHA_GATEWAY_ID=did:web:staging.w3s.link" >> .env
           echo "NEXT_PUBLIC_SENTRY_ENV=staging" >> .env
           echo "NEXT_PUBLIC_TELEGRAM_API_ID=${{ secrets.TELEGRAM_API_ID }}" >> .env
           echo "NEXT_PUBLIC_TELEGRAM_API_HASH=${{ secrets.TELEGRAM_API_HASH }}" >> .env
@@ -153,9 +153,8 @@ jobs:
           echo "NEXT_PUBLIC_STORACHA_SERVICE_DID=did:web:web3.storage" >> .env
           echo "NEXT_PUBLIC_STORACHA_SERVICE_URL=https://up.storacha.network" >> .env
           echo "NEXT_PUBLIC_STORACHA_RECEIPTS_URL=https://up.storacha.network/receipt/" >> .env
-          echo "NEXT_PUBLIC_STORACHA_GATEWAY_HOSTNAME=ipfs.w3s.link" >> .env
+          echo "NEXT_PUBLIC_STORACHA_GATEWAY_URL=https://w3s.link" >> .env
           echo "NEXT_PUBLIC_STORACHA_GATEWAY_ID=did:web:w3s.link" >> .env
-          echo "NEXT_PUBLIC_IPFS_GATEWAY_URL=https://%ROOT_CID%.ipfs.w3s.link" >> .env
           echo "NEXT_PUBLIC_SENTRY_ENV=production" >> .env
           echo "NEXT_PUBLIC_TELEGRAM_API_ID=${{ secrets.TELEGRAM_API_ID }}" >> .env
           echo "NEXT_PUBLIC_TELEGRAM_API_HASH=${{ secrets.TELEGRAM_API_HASH }}" >> .env
