--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@storacha/client": "^1.2.5",
 		"@storacha/did-mailto": "^1.0.2",
+		"@storacha/ucn": "^1.0.0",
 		"@storacha/ui-react": "^2.6.4",
 		"@storacha/upload-client": "^1.0.9",
 		"@telegram-apps/sdk-react": "^2.0.20",
