--- a/app/package.json
+++ b/app/package.json
@@ -25,11 +25,13 @@
 		"@radix-ui/react-radio-group": "^1.2.2",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
+		"@storacha/access": "^1.1.1",
 		"@storacha/client": "^1.2.5",
 		"@storacha/did-mailto": "^1.0.2",
 		"@storacha/ucn": "1.1.0-rc.4",
 		"@storacha/ui-react": "^2.6.4",
 		"@storacha/upload-client": "^1.0.9",
+		"@telegram-apps/init-data-node": "^2.0.7",
 		"@telegram-apps/sdk-react": "^2.0.20",
 		"carstream": "^2.3.0",
 		"class-variance-authority": "^0.7.1",
