--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
 	"name": "tg-mini-app",
 	"private": true,
 	"scripts": {
-		"app:dev": "pnpm --filter app dev",
-		"server:dev": "pnpm --filter server start:dev"
+		"app:dev": "pnpm --filter app dev"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
