--- a/app/package.json
+++ b/app/package.json
@@ -26,13 +26,20 @@
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@storacha/access": "^1.1.1",
-		"@storacha/client": "^1.2.5",
+		"@storacha/capabilities": "^1.4.0",
+		"@storacha/client": "^1.2.6",
 		"@storacha/did-mailto": "^1.0.2",
 		"@storacha/ucn": "1.1.0-rc.4",
 		"@storacha/ui-react": "^2.6.4",
 		"@storacha/upload-client": "^1.0.9",
 		"@telegram-apps/init-data-node": "^2.0.7",
 		"@telegram-apps/sdk-react": "^2.0.20",
+		"@ucanto/client": "^9.0.1",
+		"@ucanto/core": "^10.3.1",
+		"@ucanto/principal": "^9.0.2",
+		"@ucanto/transport": "^9.2.0",
+		"big-integer": "^1.6.52",
+		"buffer": "^6.0.3",
 		"carstream": "^2.3.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -49,7 +56,7 @@
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
-		"telegram": "^2.26.22",
+		"telegram": "2.26.8",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
