--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,6 +40,9 @@ env:
   TF_VAR_domain_base: 
   TF_VAR_allowed_account_id: ${{ secrets.aws-account-id }}
   TF_VAR_region: ${{ secrets.region }}
+  TF_VAR_telegram_bot_token: ${{ secrets.telegram-bot-token }}
+  TF_VAR_next_public_telegram_api_id: ${{ secrets.next-public-telegram-api-id }}
+  TF_VAR_next_public_telegram_api_hash: ${{ secrets.next-public-telegram-api-hash }}
   DEPLOY_ENV: ci
 
 permissions:
