--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,14 @@
 		"start": "next start",
 		"lint": "next lint",
 		"test": "pnpm lint",
+		"db:migrate": "node ./scripts/migrate.mjs",
 		"pages:build": "npx @cloudflare/next-on-pages",
 		"pages:preview": "pnpm run pages:build && wrangler pages dev",
 		"pages:deploy": "pnpm run pages:build && wrangler pages deploy"
 	},
 	"dependencies": {
+		"@aws-sdk/rds-signer": "^3.816.0",
+		"@dotenvx/dotenvx": "^1.44.1",
 		"@ipld/dag-cbor": "^9.2.2",
 		"@ipld/dag-json": "^10.2.3",
 		"@ipld/dag-ucan": "^3.4.5",
@@ -52,11 +55,14 @@
 		"next": "15.3.0-canary.33",
 		"node-cache": "^5.1.2",
 		"p-queue": "^8.1.0",
+		"postgres": "^3.4.7",
+		"postgres-shift": "^0.1.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
 		"tailwindcss-animate": "^1.0.7",
 		"telegram": "2.26.8",
+		"uuid": "^11.1.0",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
