--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
 		"clsx": "^2.1.1",
 		"crypto": "^1.0.1",
 		"input-otp": "^1.4.2",
+		"iron-session": "^8.0.4",
 		"jsonwebtoken": "^9.0.2",
 		"lucide-react": "^0.469.0",
 		"mongoose": "^8.10.1",
