--- a/app/package.json
+++ b/app/package.json
@@ -57,6 +57,7 @@
     "multiformats": "^13.3.2",
     "next": "15.3.0-canary.33",
     "node-cache": "^5.1.2",
+    "p-map": "^7.0.3",
     "p-queue": "^8.1.0",
     "postgres": "^3.4.7",
     "postgres-shift": "^0.1.0",
