--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,7 @@
     "input-otp": "^1.4.2",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.10.1",
     "multiformats": "^13.3.2",
