fix: format date-time in current user locale
added a new hook, useUserLocale that returns a couple of functions to format date-time while considering the user's locale.

we first check for the telegram locale, if there isn't, fallback to the browser's locale.

--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "@storacha/upload-client": "^1.2.3",
     "@telegram-apps/init-data-node": "^2.0.7",
     "@telegram-apps/sdk-react": "^2.0.20",
+    "@twa-dev/sdk": "^8.0.2",
     "@ucanto/client": "^9.0.1",
     "@ucanto/core": "^10.4.0",
     "@ucanto/principal": "^9.0.2",
