feat: add lottie-react and pako

--- a/app/package.json
+++ b/app/package.json
@@ -52,6 +52,7 @@
     "input-otp": "^1.4.2",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.10.1",
@@ -61,6 +62,7 @@
     "node-cache": "^5.1.2",
     "p-map": "^7.0.3",
     "p-queue": "^8.1.0",
+    "pako": "^2.1.0",
     "postgres": "^3.4.7",
     "postgres-shift": "^0.1.0",
     "react": "^19.0.0",
@@ -79,6 +81,7 @@
     "@cloudflare/next-on-pages": "^1.13.8",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "eruda": "^3.4.1",
