feat: add lottie-react and pako
# Conflicts:
#	app/package.json
#	pnpm-lock.yaml

--- a/app/package.json
+++ b/app/package.json
@@ -55,6 +55,7 @@
     "input-otp": "^1.4.2",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.0",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.10.1",
@@ -65,6 +66,7 @@
     "p-map": "^7.0.3",
     "p-queue": "^8.1.0",
     "p-retry": "^6.2.1",
+    "pako": "^2.1.0",
     "pdfjs-dist": "^5.3.93",
     "postgres": "^3.4.7",
     "postgres-shift": "^0.1.0",
@@ -84,6 +86,7 @@
     "@cloudflare/next-on-pages": "^1.13.8",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "eruda": "^3.4.1",
