feat: add bot webhook handling

--- a/app/package.json
+++ b/app/package.json
@@ -62,6 +62,7 @@
     "next": "15.3.0-canary.33",
     "next-plausible": "^3.12.4",
     "node-cache": "^5.1.2",
+    "node-telegram-bot-api": "^0.66.0",
     "p-map": "^7.0.3",
     "p-queue": "^8.1.0",
     "p-retry": "^6.2.1",
@@ -84,6 +85,7 @@
     "@cloudflare/next-on-pages": "^1.13.8",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/node-telegram-bot-api": "^0.64.9",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "eruda": "^3.4.1",
