--- a/app/package.json
+++ b/app/package.json
@@ -47,12 +47,14 @@
     "@ucanto/core": "^10.4.0",
     "@ucanto/principal": "^9.0.2",
     "@ucanto/transport": "^9.2.0",
+    "@web3-storage/data-segment": "^5.3.0",
     "big-integer": "^1.6.52",
     "buffer": "^6.0.3",
     "carstream": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
+    "fr32-sha2-256-trunc254-padded-binary-tree-multihash": "^3.3.0",
     "input-otp": "^1.4.2",
     "iron-session": "^8.0.4",
     "jsonwebtoken": "^9.0.2",
