--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "@ucanto/transport": "^9.2.0",
     "@web3-storage/data-segment": "^5.3.0",
     "big-integer": "^1.6.52",
+    "bottleneck": "^2.19.5",
     "buffer": "^6.0.3",
     "carstream": "^2.3.0",
     "class-variance-authority": "^0.7.1",
