--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "@storacha/ucn": "1.1.0",
     "@storacha/ui-react": "^2.7.13",
     "@storacha/upload-client": "^1.3.2",
+    "@tanstack/react-query": "^5.90.5",
     "@telegram-apps/init-data-node": "^2.0.7",
     "@telegram-apps/sdk-react": "^2.0.20",
     "@ucanto/client": "^9.0.1",
